feat: Configure the uf-apk-delivery plugin
Add repository to pluginManagement section in settings.gradle file.
configure the plugin in build.gradle file.

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,13 @@
  *
  *
  */
-
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        mavenLocal()
+        jcenter()
+        google()
+    }
+}
 include ':app'
 rootProject.name = "uf-apk-delivery-example"
