--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@
 buildscript {
     ext.kotlin_version = "1.3.72"
     repositories {
+        mavenLocal()
         google()
         jcenter()
     }
@@ -26,6 +27,10 @@ buildscript {
     }
 }
 
+plugins{
+    id 'com.kynetics.updatefactory.plugin.ufapkdelivery' version("1.0.0")
+}
+
 allprojects {
     repositories {
         google()
@@ -35,4 +40,19 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ufApkDelivery {
+    tenant = '<tenant_name>'
+    username = '<username>'
+    password = '<password>'
+    vendor = 'kynetics'
+    version = '3'
+    buildType = "release"
+    productFlavor = ""
+    ignoreProjects = [""]
+    deliveryType = "SINGLE_SOFTWARE_MODULE"
+    thirdLevelDomain = "personal"
+    softwareModuleType = "application"
+    distributionType = "app"
 }
